--- a/src/app/sections/product-choice/product-choice.component.html
+++ b/src/app/sections/product-choice/product-choice.component.html
@@ -1,2 +1,36 @@
+<section>
+    <div>
+        <h5>상품 플랜 선택</h5>
+        <p>
+            원하시는 보장을 확인하신 후,<br>
+            나에게 꼭 맞는 보험을 선택하십시오
+        </p>
+        
+        <p>
 
+        </p>
 
+        
+    </div>
+
+    <div class="plan-list-container">
+        <form >
+            <ul class="plan-list">
+                <li>
+                    <h6>라이트형</h6>
+                    <p>km당 1원</p>
+                </li>
+                <li>
+                    <h6>기본형</h6>
+                    <p>km당 2원</p>
+                </li>
+            </ul>
+        </form>
+        
+    </div>
+    <div class="plan-choice-btn-wrap">
+        <button class="plan-choice-btn" (cilck)="decidePlan()">
+            선택완료
+        </button>
+    </div>
+</section>
