상품플랜선택컴포넌트

--- a/src/app/sections/product-choice/product-choice.component.html
+++ b/src/app/sections/product-choice/product-choice.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="plan-list-container">
-        <form >
+        <form [formGroup]="planForm">
             <ul class="plan-list">
                 <li>
                     <h6>라이트형</h6>
