--- a/src/app/sections/notices/notices.component.html
+++ b/src/app/sections/notices/notices.component.html
@@ -1,1 +1,18 @@
-<p>notices works!</p>
+<section>
+    <div>
+        <h5>
+            아래항목중 해당사항이 있습니까?
+        </h5>
+        <p>
+            답변이 사실과 다를 경우 보험 유지 및 보험금 지급이 거절될 수 있습니다.
+        </p>
+    </div>
+    <div>
+
+    </div>
+    <div>
+        <button class="next-btn">
+            선택완료
+        </button>
+    </div>
+</section>
