--- a/src/app/sections/product-choice/product-choice.component.html
+++ b/src/app/sections/product-choice/product-choice.component.html
@@ -29,7 +29,7 @@
         
     </div>
     <div class="plan-choice-btn-wrap">
-        <button class="plan-choice-btn" (cilck)="decidePlan()">
+        <button class="next-btn" (cilck)="decidePlan()">
             선택완료
         </button>
     </div>
