--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -1,7 +1,7 @@
 
 
 <div [ngSwitch]="STEP">
-    <section-product-choice *ngSwitchCase="1"></section-product-choice>
+    <section-product-choice *ngSwitchCase="1" (changePage)="changePage($event)"></section-product-choice>
     <section-notices *ngSwitchCase="2"></section-notices>
     <section-join-information *ngSwitchCase="3"></section-join-information>
     <section-review *ngSwitchCase="4"></section-review>
