--- a/src/app/sections/product-choice/product-choice.component.html
+++ b/src/app/sections/product-choice/product-choice.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div>
+    <div class="page-head">
         <h5>상품 플랜 선택</h5>
         <p>
             원하시는 보장을 확인하신 후,<br>
@@ -29,7 +29,7 @@
         
     </div>
     <div class="plan-choice-btn-wrap">
-        <button class="next-btn" (cilck)="decidePlan()">
+        <button class="next-btn" (click)="decidePlan()">
             선택완료
         </button>
     </div>
