고지사항 텍스트추가

--- a/src/app/sections/notices/notices.component.html
+++ b/src/app/sections/notices/notices.component.html
@@ -8,7 +8,9 @@
         </p>
     </div>
     <div>
-
+        이륜차를 운전하고 있거나,
+        영업용차량이나 영업목적으로 
+        운전하고 있습니까?
     </div>
     <div>
         <button class="next-btn">
