--- a/src/app/sections/product-choice/product-choice.component.html
+++ b/src/app/sections/product-choice/product-choice.component.html
@@ -34,7 +34,7 @@
         </button>
     </div>
 
-    <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
+    <!-- <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
         <ngb-panel title="Simple">
           <ng-template ngbPanelContent>
             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia
@@ -59,5 +59,5 @@
           </ng-template>
         </ngb-panel>
     
-      </ngb-accordion>
+      </ngb-accordion> -->
 </section>
