고지사항 컴포넌트 업데이트

--- a/src/app/sections/notices/notices.component.html
+++ b/src/app/sections/notices/notices.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div>
+    <div class="page-head">
         <h5>
             아래항목중 해당사항이 있습니까?
         </h5>
@@ -13,8 +13,14 @@
         운전하고 있습니까?
     </div>
     <div>
-        <button class="next-btn">
-            선택완료
-        </button>
+        <div class="notice-complete-btn-wrap">
+            <button class="notice-complete-btn">
+                네
+            </button>
+            <button class="notice-complete-btn">
+                아니오
+            </button>
+        </div>
+        
     </div>
 </section>
