--- a/src/app/sections/notices/notices.component.scss
+++ b/src/app/sections/notices/notices.component.scss
@@ -7,3 +7,16 @@
     font-weight: 600;
     cursor: pointer;
 }
+
+.notice-complete-btn-wrap{
+    height: 50px;
+}
+.notice-complete-btn{
+    width: 50%;
+    height: 100%;
+}
+
+.page-head {
+    background-color: #FAE100;
+    padding: 20px;
+}
