--- a/src/app/sections/notices/notices.component.html
+++ b/src/app/sections/notices/notices.component.html
@@ -17,7 +17,7 @@
             <button class="notice-complete-btn">
                 네
             </button>
-            <button class="notice-complete-btn">
+            <button class="notice-complete-btn" (click)="nextStep()">
                 아니오
             </button>
         </div>
