가입정보확인컴포넌트 생성

--- a/src/app/sections/review/review.component.html
+++ b/src/app/sections/review/review.component.html
@@ -1,1 +1,31 @@
-<p>review works!</p>
+<section>
+    <div class="page-head">
+        <h5>가입내용 확인</h5>
+        <p>
+            입력한 정보가 맞는지 최종 확인해주세요. <br>
+            내용확인 후 완료버튼을 누르면 보험적용이 가능합니다.
+        </p>
+    </div>
+
+    <div class="review-information-area">
+
+        <div class="contract-information-box">
+            <h6>보험 계약정보</h6>
+            
+        </div>
+        <div class="insured-information-box">
+            <h6>피보험자 정보</h6>
+
+        </div>
+        <div class="premium-box">
+            <p>
+                내비 운행 시 적용 2원/km (100km 운행시 200원)
+            </p>
+        </div>
+    </div>
+    <div class="review-btn-wrap">
+        <button (click)="submit()">
+            가입완료
+        </button>
+    </div>
+</section>
