--- a/src/app/sections/join-information/join-information.component.html
+++ b/src/app/sections/join-information/join-information.component.html
@@ -25,7 +25,7 @@
 
 
     <div class="join-btn-wrap">
-        <button class="join-btn">
+        <button class="join-btn" (click)="nextStep()">
             입력완료
         </button>
     </div>
