--- a/src/app/sections/join-information/join-information.component.html
+++ b/src/app/sections/join-information/join-information.component.html
@@ -12,20 +12,24 @@
     <div class="form-wrap">
         <form [formGroup]="userForm">
             <label for="name">Name: </label>
-            <input type="text" id="name" placeholder="이름">
+            <input type="text" id="driverName" placeholder="이름" formControlName="driverName">
 
             <label for="cell">Cell: </label>
-            <input type="text" id="cell" placeholder="휴대폰번호">
+            <input type="text" id="driverCell" placeholder="휴대폰번호" formControlName="driverCell">
 
             <label for="socialNumber">SocialNumber: </label>
-            <input type="text" id="socialNumber" placeholder="주민등록번호">
+            <input type="text" id="driverSocialNumber" placeholder="주민등록번호" formControlName="driverSocialNumber">
+
+            <input type="hidden" id="naviId" formControlName="naviId">
+            <input type="hidden" id="agreeCi" formControlName="agreeCi">
+            
         </form>
 
     </div>
 
 
     <div class="join-btn-wrap">
-        <button class="join-btn" (click)="nextStep()">
+        <button class="join-btn" (click)="onSubmit()">
             입력완료
         </button>
     </div>
