--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,11 @@ body{
 }
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+.modal-content{
+    border-radius:0%
+}
+
+.modal-dialog{
+    margin:0;
+}
