--- a/src/app/pages/join/insurance-information/insurance-information.component.html
+++ b/src/app/pages/join/insurance-information/insurance-information.component.html
@@ -15,7 +15,7 @@
     
     <section class="insurance-information-area">
     
-        <ul class="description-box">
+        <ul class="description-box" id="product-information-list">
             <li class="description-content">
                 <dl>보험기간</dl>
                 <dd>가입일로부터 1년</dd>    
@@ -34,41 +34,41 @@
             </li> 
         </ul>
     
-        <ul class="description-box">
+        <ul id="guarantee-list">
             <li class="description-content">
-                <div>
+                <dl>
                     <img src="/assets/image/repair.svg" alt="">
-                </div>
-                <div>
-                    형사합의금 <br>
-                    교통사고 처리지원금
-                </div>
+                </dl>
+                <dd>
+                    <h6 class="guarantee-title">형사합의금</h6> 
+                    <small class="guarantee-sub-title">교통사고 처리지원금</small>
+                </dd>
             </li>
             <li class="description-content">
-                <div>
+                <dl>
                     <img src="/assets/image/carpool.svg" alt="">
-                </div>
-                <div>
-                    변호사 선입비 <br>
-                    공소제기 또는 구속 시
-                </div>
+                </dl>
+                <dd>
+                    <h6 class="guarantee-title">변호사 선임비</h6>
+                    <small class="guarantee-sub-title">공소제기 또는 구속 시</small>
+                </dd>
                 
             </li>
             <li class="description-content">
-                <div>
+                <dl>
                     <img src="/assets/image/tpointtown.svg" alt="">
-                </div>
-                <div>
-                    벌금보상 <br>
-                    벌금형이 판결된 경우
-                </div>
+                </dl>
+                <dd>
+                    <h6 class="guarantee-title">벌금보상</h6>
+                    <small class="guarantee-sub-title">벌금형이 판결된 경우</small>
+                </dd>
                 
             </li>
         </ul>
     
         <p id="guarantee-content">카카오내비를 사용하여 길안내, 안전운전으로 운행하는 상황에만 보험 보장을 받을 수 있습니다.</p>
     
-        <ul class="description-box modal-list">
+        <ul class="description-box" id="modal-list">
             <li class="description-content">
                 <dl>꼭 알아두실 내용</dl>
                 <dd (click)="open(essentialContent)"><fa-icon [icon]="faAngleRight"></fa-icon></dd>
@@ -110,14 +110,14 @@
 
 <ng-template #essentialContent let-modal>
     <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title"></h4>
+      <h4 class="" id="modal-basic-title"></h4>
       <div class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')">
         <fa-icon [icon]="faX"></fa-icon>
       </div>
     </div>
     <div class="modal-body">
         <div class="content-box">
-            <h3>꼭 알아두실 내용</h3>
+            <h3 class="modal-title">꼭 알아두실 내용</h3>
             <p>이 상품은 “DB손해보험 고객사랑보험(플랫폼전용)” 입니다.
                 보험계약 전 약관을 확인하시기 바랍니다. 
             </p>
@@ -125,8 +125,8 @@
 
         
         <div class="content-box">
-            <h4>단체보험계약</h4>
-            <ul>
+            <h4 class="content-title">단체보험계약</h4>
+            <ul class="no-padding-left">
                 <li>본 보험 계약은 카카오모빌리티를 계약자, 카카오모빌리티 회원 중 가입 고객을 피보험자, 카카오모빌리티 회원 중 가입고객 및 법정상속인을 보험수익자로 하는 단체계약입니다.</li>
                 <li>본 보험계약은 단체형으로 운영하여 청약철회 및 품질보증 해지대상이 아닙니다.</li>
                 <li>본 보험계약은 단체형으로 운영하여 연말정산 시 소득공제대상이 아닙니다.</li>
@@ -134,27 +134,27 @@
         </div>
 
         <div class="content-box">
-            <h4>만기환급금</h4>
+            <h4 class="content-title">만기환급금</h4>
             <p>본 상품은 순수보장성 상품으로 만기 시 만기환급금이 없으며 또한 보험계약대출제도가 없습니다.</p>
         </div>
 
         <div class="content-box">
-            <h4>예금자보호 안내</h4>
+            <h4 class="content-title">예금자보호 안내</h4>
             <p>이 보험계약은 예금자보호법에 따라, 예금보험공사가 보호하되, 보호한도는 본 보험회사에 있는 귀하의 모든 예금보험 대상 금융상품의 해약환급금(또는 만기 시 보험금이나 사고 보험금)에 기타 지급금을 합하여 1인당 “최고 5천만원"이며, 5천만원을 초과하는 나머지 금액은 보호하지 않습니다. 다만, 보험계약자 및 보험료 납부자가 법인인 보험계약은 예금자보호법에 따라 예금보험공사가 보호하지 않습니다.</p>
         </div>
         
         <div class="content-box">
-            <h4>보험계약을 할 때</h4>
+            <h4 class="content-title">보험계약을 할 때</h4>
             <p>보험계약 시에는 보험상품명, 보험기간, 보험료, 보험료납입기간, 피보험자 등을 반드시 확인하시고, 자세한 상품내용은 반드시 보험약관을 확인하시기 바랍니다.</p>
         </div>
 
         <div class="content-box">
-            <h4>가입자의 계약 전 알릴 의무</h4>
+            <h4 class="content-title">가입자의 계약 전 알릴 의무</h4>
             <p>계약자 또는 피보험자는 보험계약 청약 시 청약서(질문서를 포함합니다)의 질문사항에 대하여 알고 있는 내용을 반드시 사실대로 알려야합니다. 그렇지 않은 경우 보험금의 지급이 거절되거나 보험계약이 해지될 수 있습니다.</p>
         </div>
 
         <div class="content-box">
-            <h4>계약해지 후 다른 보험 계약 시 유의사항</h4>
+            <h4 class="content-title">계약해지 후 다른 보험 계약 시 유의사항</h4>
             <p>보험계약자가 기존에 체결했던 보험계약을 해지하고 다른 보험계약을 체결하면 보험인수가 거절되거나 보험료가 인상되거나 보장내용이 달라질 수 있습니다.</p>
         </div>
     </div>
@@ -163,29 +163,29 @@
 
 <ng-template #guaranteeContent let-modal>
     <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title"></h4>
+      <h4 id="modal-basic-title"></h4>
       <div class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')">
         <fa-icon [icon]="faX"></fa-icon>
       </div>
     </div>
     <div class="modal-body">
         <div class="content-box">
-            <h3>보장내용</h3>
+            <h3 class="modal-title">보장내용</h3>
         </div>
 
         <div class="content-box">
-            <h4>교통사고처리지원금(동승자포함)</h4>
-            <h5>지급사유</h5>
+            <h4 class="content-title">교통사고처리지원금(동승자포함)</h4>
+            <h5 class="content-sub-title">지급사유</h5>
             <p>자동차사고로 인하여 타인에게 상해를 입힌 경우 피보험자가 형사합의금으로 지급한 금액을 교통사고처리지원금으로 지급 </p>
 
-            <ul>
+            <ul class="no-list-style no-padding-left">
                 <li>가. 피해자가 사망한 경우 : 3,000만원 한도로 지급 </li>
                 <li>
                     나. 중대법규위반 교통사고로 피해자가 42일 이상 진단을 받은 경우 
-                    <ul>
-                        <li>1. 42일 이상 70일 미만 진단 시 : 1,000만원 한도 실손 보상</li>
-                        <li>2. 70일 이상 140일 미만 진단 시 : 2,000만원 한도 실손 보상 </li>
-                        <li>3. 140일 이상 진단 시 : 3,000만원 한도 실손 보상 </li>
+                    <ul class="list-style-number">
+                        <li>42일 이상 70일 미만 진단 시 : 1,000만원 한도 실손 보상</li>
+                        <li>70일 이상 140일 미만 진단 시 : 2,000만원 한도 실손 보상 </li>
+                        <li>140일 이상 진단 시 : 3,000만원 한도 실손 보상 </li>
                     </ul>
                 </li>
                 <li>
@@ -195,30 +195,30 @@
 
             <p>교통사고처리지원금 보장에 대하여 보험금을 지급할 다른 계약이 체결되어 있는 경우에는 각각의 계약에 대하여 비례 보상함.</p>
 
-            <h5>지급금액</h5>
+            <h5 class="content-sub-title">지급금액</h5>
             <p>매 사고당 피해자 1인당 3,000만원 한도 실손보상</p>
         </div>
 
 
         <div class="content-box">
-            <h4>자동차사고 변호사선임비용(약식기소 제외) 특별약관 특약</h4>
-            <h5>지급사유</h5>
+            <h4 class="content-title">자동차사고 변호사선임비용(약식기소 제외) 특별약관 특약</h4>
+            <h5 class="content-sub-title">지급사유</h5>
             <p>보험기간 내 자동차를 운전하던 중에 급격하고도 우연한 자동차사고로 타인의 신체(의수, 의족, 의안, 의치 등 신체보조장구는 제외하나, 인공장기나 부분 의치 등 신체에 이식되어 그 기능을 대신할 경우는 포함)에 상해를 입힘으로써 구속영장에 의하여 구속되었거나, 검찰에 의해 공소제기(약식기소는 제외)된 경우 또는 검사에 의해 약식기소 되었으나 법원에 의해 보통의 심판절차인 공판절차에 의해 재판이 진행되게 된 경우에는 변호사선임비용을 부담함으로써 입은 손해(1사고당)에 대하여 보험가입금액 한도로 지급 </p>
-            <ul>
+            <ul class="no-padding-left">
                 <li>자동차사고 변호사선임비용보장에 대하여 보험금을 지급할 다른 계약이 체결되어 있는 경우에는 각각의 계약에 대하여 실손 비례 보상</li>
                 <li>음주/무면허/도주사고는 보상에서 제외</li>
             </ul>
         </div>
 
         <div class="content-box">
-            <h4>벌금</h4>
-            <h5>지급사유</h5>
+            <h4 class="content-title">벌금</h4>
+            <h5 class="content-sub-title">지급사유</h5>
             <p>보험기간 내 자동차를 운전하던 중에 급격하고도 우연한 자동차사고로 타인의 신체(의수, 의족, 의안, 의치 등 신체보조장구는 제외하나, 인공장기나 부분 의치 등 신체에 이식되어 그 기능을 대신할 경우는 포함)에 상해를 입힘으로써 신체상해와 관련하여 받은 벌금액(확정판결에 의하여 정해진 벌금액을 말하며, 보험기간 중에 발생한 사고의 벌금 확정판결이 보험기간 종료 후에 이루어진 경우 포함)을 1사고당 보험가입금액 한도로 지급 </p>
-            <ul>
+            <ul class="no-padding-left">
                 <li>벌금에 대하여 보험금을 지급할 다른 계약이 체결되어 있는 경우에는 각각의 계약에 대하여 비례 보상함.</li>
             </ul>
 
-            <h5>지급금액</h5>
+            <h5 class="content-sub-title">지급금액</h5>
             <p>1사고당 2,000만원 한도</p>
         </div>
     </div>
@@ -228,45 +228,45 @@
 
 <ng-template #premiumContent let-modal>
     <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title"></h4>
+      <h4 id="modal-basic-title"></h4>
       <div class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')">
         <fa-icon [icon]="faX"></fa-icon>
       </div>
     </div>
     <div class="modal-body">
         <div class="content-box">
-            <h3>보험료 안내</h3>
+            <h3 class="modal-title">보험료 안내</h3>
         </div>
 
         <div class="content-box">
             <table>
-                <thead>
-                    <th>담보명</th>
-                    <th>가입금액</th>
+                <thead class="table-head">
+                    <th class="cell-left">담보명</th>
+                    <th class="cell-right">가입금액</th>
                 </thead>
-                <tbody>
+                <tbody class="table-body">
                     <tr>
-                        <td>교통사고처리지원금(동승자포함)</td>
-                        <td>3,000만원</td>
+                        <td class="cell-left">교통사고처리지원금(동승자포함)</td>
+                        <td class="cell-right">3,000만원</td>
                     </tr>
                     <tr>
-                        <td>자동차사고변호사선임비용(약식기소제외)</td>
-                        <td>500만원</td>
+                        <td class="cell-left">자동차사고변호사선임비용(약식기소제외)</td>
+                        <td class="cell-right">500만원</td>
                     </tr>
                     <tr>
-                        <td>벌금</td>
-                        <td>3,000만원</td>
+                        <td class="cell-left">벌금</td>
+                        <td class="cell-right">3,000만원</td>
                     </tr>
-                    <tr>
-                        <td>보험료</td>
-                        <td>1km 당 2원</td>
+                    <tr id="premium-cell">
+                        <td class="cell-left color-blue">보험료</td>
+                        <td class="cell-right color-blue">1km 당 2원</td>
                     </tr>
                 </tbody>
 
 
             </table>
 
-            <ul>
+            <ul class="no-padding-left">
                 <li>본 상품은 직업 및 성별에 관계없이 보험료가 동일합니다. </li>
                 <li>회사가 정하는 기준에 의거 가입연령 및 건강 상태, 직무 등에 따라 보험가입 금액이 제한되거나 가입이 불가능할 수 있습니다.</li>
             </ul>
@@ -278,7 +278,7 @@
 
 <ng-template #payoutsLimitContent let-modal>
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title"></h4>
+        <h4 id="modal-basic-title"></h4>
         <div class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')">
           <fa-icon [icon]="faX"></fa-icon>
         </div>
@@ -286,11 +286,11 @@
     <div class="modal-body">
 
         <div class="content-box">
-            <h3>보험금 지급 제한 사항</h3>
+            <h3 class="modal-title">보험금 지급 제한 사항</h3>
         </div>
 
         <div class="content-box">
-            <ul>
+            <ul class="no-padding-left">
                 <li>벌금, 자동차사고 변호사선임비용(약식기소제외), 교통사고처리지원금(동승자 포함) 특약 등은 다수계약(공제 계약을 포함)이 체결되어 있는 경우, 약관에 따라 비례보상합니다. </li>
                 <li>벌금, 자동차사고 변호사선임비용(약식기소제외), 교통사고처리지원금(동승자 포함) 는 음주, 무면허 운전 중 사고나 뺑소니, 경기용/경기를 위한 연습용 및 시험용으로 운전 시 사고는 보상하지 않습니다. </li>
                 <li>피보험자가 고의로 자신을 해친 경우. 다만, 피보험자가 심신상실 등으로 자유로운 의사결정을 할 수 없는 상태에서 자신을 해친 경우에는 보험금을 지급합니다. </li>
@@ -299,10 +299,10 @@
                 <li>피보험자의 임신, 출산(제왕절개를 포함합니다), 산후기. 그러나, 보험사가 보장하는 보험금 지급사유로 인한 경우에는 보험금을 지급합니다. </li>
                 <li>전쟁, 외국의 무력행사, 혁명, 내란, 사변, 폭동</li>
                 <li>피보험자가 직업, 직무 또는 동호회 활동목적으로 아래에 열거된 행위로 보험금 지급사유가 발생한 때 
-                        <ul>
-                            <li>1. 전문등반(전문적인 등산용구를 사용하여 암벽 또는 빙벽을 오르내리거나 특수한 기술, 경험, 사전훈련을 필요로 하는 등반을 말합니다), 글라이더 조종, 스카이다이빙, 스쿠버다이빙, 행글라이딩, 수상보트, 패러글라이딩 </li>
-                            <li>2. 모터보트, 자동차 또는 오토바이에 의한 경기, 시범, 흥행(이를 위한 연습을 포함합니다) 또는 시운전(다만, 공용도로상에서 시운전을 하는 동안 보험금 지급사유가 발생한 경우에는 보장합니다) </li>
-                            <li>3. 선박에 탑승하는 것을 직무로 하는 사람이 직무상 선박에 탑승하고 있는 동안 </li>
+                        <ul class="no-padding-left list-style-number">
+                            <li>전문등반(전문적인 등산용구를 사용하여 암벽 또는 빙벽을 오르내리거나 특수한 기술, 경험, 사전훈련을 필요로 하는 등반을 말합니다), 글라이더 조종, 스카이다이빙, 스쿠버다이빙, 행글라이딩, 수상보트, 패러글라이딩 </li>
+                            <li>모터보트, 자동차 또는 오토바이에 의한 경기, 시범, 흥행(이를 위한 연습을 포함합니다) 또는 시운전(다만, 공용도로상에서 시운전을 하는 동안 보험금 지급사유가 발생한 경우에는 보장합니다) </li>
+                            <li>선박에 탑승하는 것을 직무로 하는 사람이 직무상 선박에 탑승하고 있는 동안 </li>
                         </ul>
                 </li>
             </ul>
@@ -315,19 +315,65 @@
 
 <ng-template #claimGuideContent let-modal>
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title"></h4>
+        <h4 id="modal-basic-title"></h4>
         <div class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')">
           <fa-icon [icon]="faX"></fa-icon>
         </div>
     </div>
     <div class="modal-body">
         <div class="content-box">
-          <h3>청구안내</h3>
+          <h3 class="modal-title">청구안내</h3>
 
 
           <h4>청구서류</h4>
           보류
+          
         </div>
+
+        <div class="content-box">
+            <h5 class="content-sub-title">공통</h5>
+            <ul class="no-list-style no-padding-left-0">
+                <li>보험금청구서</li>
+                <li>통장사본(사전등록계좌 등 본인계좌 확인 가능시 불필요)</li>
+                <li>개인(신용)정보처리 동의서</li>
+                <li>청구인 신분증 사본</li>
+                <li>사고입증서류(교통사고사실확인서 등)</li>
+            </ul>
+        </div>
+
+        <div class="content-box">
+            <h5 class="content-sub-title">벌금</h5>
+            <ul class="no-list-style no-padding-left-0">
+                <li>법원 판결문, 약식명령문</li>
+                <li>벌금납부 영수증</li>
+            </ul>
+        </div>
+
+        <div class="content-box">
+            <h5 class="content-sub-title">변호사 선임비용</h5>
+            <ul class="no-list-style no-padding-left-0">
+                <li>판결문, 구속영장(재소 출소 증명서)</li>
+                <li>공소장(교통사고처리지원금 담보의 경우 약식 기소 제외)</li>
+                <li>변호사가 발행한 세금계산서
+                    (변호사 선임비용 담보청구시)
+                </li>
+            </ul>
+        </div>
+
+        <div class="content-box">
+            <h5 class="content-sub-title">교통사고 처리지원금</h5>
+            <ul class="no-list-style no-padding-left-0">
+                <li>피해진단서</li>
+                <li>경찰서에 제출된 형사합의서(합의금액 명시)</li>
+                <li>공소장</li>
+                <li>공탁서 및 피해자 공탁금 출금확인서(미확인시)</li>
+                <li>형사합의금이 입금된 내역</li>
+            </ul>
+        </div>
+
+        <ul>
+            <li></li>
+        </ul>
     </div>
     
 </ng-template>
