--- a/src/app/pages/join/insurance-information/insurance-information.component.scss
+++ b/src/app/pages/join/insurance-information/insurance-information.component.scss
@@ -4,7 +4,8 @@
 }
 
 .title-area{
-
+    padding-top: 10px;
+    padding-bottom: 30px;
     .title {
         font-family: 'Roboto';
         font-style: normal;
@@ -28,12 +29,19 @@
     }
 }
 
+.image-box{
+    text-align: center;
+    padding: 20px 0;
+}
+
 .description-box{
     padding-left: 0;
 
     .description-content{
         display: flex;
         justify-content: space-between;
+        height: 40px;
+        align-items: center;
 
         dl{
             font-family: 'Roboto';
@@ -49,35 +57,70 @@
             font-weight: 400;
             font-size: 14px;
             color: #262D39;
+            margin-bottom: 0;
         }
     }
 
-    #premium-content{
-        color: #3581FF;
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
+    #premium-content {
         line-height: 22px;
         border-top: 1px solid rgba(38, 45, 57, 0.32);
         border-bottom: 1px solid rgba(38, 45, 57, 0.32);
+        
+        padding: 26px 0;
+        margin-top: 6px;
+
+        dl, dd{
+            color: #3581FF;
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 16px;
+        
+        }
+        
     }
 }
 
-.modal-list {
-    li{
-        height: 50px;
-        border-top: 1px solid #F5F6F7;
-    }
-    li:last-child{
-        border-bottom: 1px solid #F5F6F7;
-    }
-    
+#product-information-list{
+    margin-bottom: 0;
+    padding: 20px 0;
 }
 
-.image-box{
-    text-align: center;
+#guarantee-list{
+    list-style: none;
+    padding-left: 0;
+    padding: 10px 0;
+    .description-content{
+        padding: 5px 0;
+    }
+
+    dl, dd{
+        display: inline-block;
+        margin-bottom: 0;
+        vertical-align: middle;
+    }
+    dl{
+        margin-right: 10px;
+    }
+    .guarantee-title{
+        font-size: 16px;
+        font-weight: 700;
+        margin-bottom: 0;
+    }
+    .guarantee-sub-title{
+        color: rgba(38, 45, 57, 0.52);
+        font-size: 14px;
+    }
 }
+
+
+
+
+#guarantee-content{
+    margin-bottom: 30px;
+}
+
+
 
 
 #guarantee-content{
@@ -91,7 +134,25 @@
 
 }
 
+#modal-list {
+    margin-bottom: 30px;
+    li{
+        height: 50px;
+        border-top: 1px solid #F5F6F7;
+    }
+    li:last-child{
+        border-bottom: 1px solid #F5F6F7;
+    }
+    
+}
 
+.bottom-area{
+    p{
+        font-size: 14px;
+        font-weight: 400;
+        color: rgba(38, 45, 57, 0.52);
+    }
+}
 
 #next-button{
     height: 52px;
@@ -194,4 +255,90 @@
         color: white;
         height: 52px;
     }
+}
+
+
+.modal-body{
+    padding-top: 0;
+    h3.modal-title{
+        font-size: 24px;
+        font-weight: 700;
+        margin-bottom: 20px;
+    }
+    h4.content-title{
+        font-size: 16px;
+        font-weight: 700;
+        margin-bottom : 14px
+    }
+    h5.content-sub-title{
+        font-size: 14px;
+        font-weight: 700;
+    }
+    .content-box{
+        padding: 10px 0;
+    }
+    ul{
+        padding-left: 20px;
+        color: rgba(38, 45, 57, 0.52);
+        font-size: 14px;
+        
+        li{
+            padding: 3px 0;
+        }
+    }
+    ul.no-list-style{
+        list-style: none;
+    }
+    ul.list-style-number{
+        list-style: auto;
+    }
+    ul.no-padding-left{
+        padding-left: 14px;
+    }
+    ul.no-padding-left-0{
+        padding-left: 0;
+    }
+    p{
+        color: rgba(38, 45, 57, 0.52);
+        font-size: 14px;
+
+    }
+
+
+    table{
+        width: 100%;
+        padding: 0 10px;
+        border-top: 1px solid black;
+        margin-bottom: 30px;
+        font-size: 14px;
+        .cell-left{
+            padding-left: 8px;
+        }
+        .cell-right{
+            text-align: right;
+            padding-right: 8px;
+        }
+
+        .table-head{
+            height: 56px;
+            vertical-align: middle;
+        }
+        .table-body{
+            color: rgba(38, 45, 57, 0.72);
+            tr{
+                height: 56px;
+                vertical-align: middle;
+                border-top: 1px solid #F5F6F7;
+                // border-bottom: 1px solid #F5F6F7;
+            }
+        }
+        #premium-cell{
+            color : #3581FF;
+            font-weight: 700;
+            border-top: 1px solid rgba(38, 45, 57, 0.72);
+            border-bottom: 1px solid rgba(38, 45, 57, 0.72);
+        }
+    }
+
+
 }
