--- a/src/app/pages/join/user-form/user-form.component.scss
+++ b/src/app/pages/join/user-form/user-form.component.scss
@@ -4,10 +4,12 @@
 }
 
 .header{
+    padding-top: 10px;
+    padding-bottom: 30px;
     font-size: 24px;
     color: #262D39;
     font-weight: 700;
-    margin-bottom: 30px;
+    
 }
 
 .input{
