--- a/src/app/pages/join/confirm/confirm.component.html
+++ b/src/app/pages/join/confirm/confirm.component.html
@@ -45,7 +45,7 @@
             </li>
             <li class="information-content">
                 <dl>휴대폰</dl>
-                <dd>{{payload.driverCell}}</dd>
+                <dd>{{payload.driverCell | dashCell}}</dd>
             </li>
         </ul>
     </section>
@@ -55,7 +55,7 @@
     <section class="bottom-area">
         <p>제공처 (주)SIMG 손해보험협회 심의필 제 43424호(2022.02.26)</p>
 
-        <button class="btn btn-primary" id="join-button">
+        <button class="btn btn-primary" id="join-button" (click)="contract()">
             가입 완료
         </button>
     </section>
